--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <title>Ops Access</title>
     <link
       href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
@@ -28,9 +29,12 @@
       <v-container>
         <v-row class="d-flex mt-3 mb-3">
           <v-card
-            append-icon="mdi-human-greeting"
             width="100%"
           >
+            <template v-slot:prepend>
+              <img width="24" height="24" src="/favicon.svg" >
+            </template>
+
             <template v-slot:title>
               Ops Access
             </template>
