--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
               >
                 Open Slack
               </v-btn>
-            </v-card-text>
-            <v-card-text>
+
+              &nbsp&nbsp
+
               <v-btn 
                 variant="tonal"
                 :href="`https://${mistEnvironments[selectedEnvironment].url}/admin/?org_id=${org}`" 
@@ -130,8 +131,10 @@
                   <img width="16" height="16" src="/mist-greyscale.svg" >
                 </template>
                 Open Org
-              </v-btn> 
+              </v-btn>
+
             </v-card-text>
+
           </v-card>
         </v-row>
       </v-container>
