Updated favicon for better visibility

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/mist.svg">
+    <link rel="icon" type="image/svg+xml" href="/mist-greyscale.svg">
     <title>Ops Access</title>
     <link
       href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
