--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
 
           </v-card>
         </v-row>
+
+        <v-snackbar location="bottom center" v-model="copied" color="green">
+          <span>Copied! <v-icon>mdi-check-circle</v-icon></span>
+        </v-snackbar>
+
       </v-container>
     </v-app>
   </script>
