--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/mist-greyscale.svg">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8' standalone='no'%3F%3E%3Csvg viewBox='0 0 190 189.6' version='1.1' id='svg2' sodipodi:docname='mist.svg' inkscape:version='1.3 (0e150ed, 2023-07-21)' xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs id='defs2'%3E%3Cfilter style='color-interpolation-filters:sRGB;' inkscape:label='Greyscale' id='filter2' x='0' y='0' width='1' height='1'%3E%3CfeColorMatrix values='0.21 0.72 0.072 0 0 0.21 0.72 0.072 0 0 0.21 0.72 0.072 0 0 0 0 0 1 0 ' id='feColorMatrix2' /%3E%3C/filter%3E%3C/defs%3E%3Csodipodi:namedview id='namedview2' pagecolor='%23ffffff' bordercolor='%23000000' borderopacity='0.25' inkscape:showpageshadow='2' inkscape:pageopacity='0.0' inkscape:pagecheckerboard='0' inkscape:deskcolor='%23d1d1d1' inkscape:zoom='1.2447257' inkscape:cx='95.201698' inkscape:cy='94.800003' inkscape:window-width='1312' inkscape:window-height='449' inkscape:window-x='185' inkscape:window-y='271' inkscape:window-maximized='0' inkscape:current-layer='svg2' /%3E%3Cg id='g2' style='filter:url(%23filter2)'%3E%3Cpolygon style='fill:%23E87200' points='190,0 102.2,0 102.2,40.9 149.1,40.9 149.1,87.8 190,87.8' id='polygon1' /%3E%3Cpolygon style='fill:%2384B135' points='50.9,51.4 50.9,91.5 98.5,91.5 98.5,139.2 138.7,139.2 138.7,51.4' id='polygon2' /%3E%3Crect style='fill:%230095A9' y='102' width='87.6' height='87.6' id='rect2' /%3E%3C/g%3E%3C/svg%3E%0A">
     <title>Ops Access</title>
     <link
       href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
@@ -32,7 +32,13 @@
             width="100%"
           >
             <template v-slot:prepend>
-              <img width="24" height="24" src="/mist.svg" >
+                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 190 189.6"> 
+                  <g>
+                      <polygon style="fill:#E87200" points="190,0 102.2,0 102.2,40.9 149.1,40.9 149.1,87.8 190,87.8"></polygon> 		
+                      <polygon style="fill:#84B135" points="50.9,51.4 50.9,91.5 98.5,91.5 98.5,139.2 138.7,139.2 138.7,51.4"></polygon>
+                      <rect style="fill:#0095A9" y="102" width="87.6" height="87.6"></rect>
+                  </g>
+               </svg>
             </template>
 
             <template v-slot:title>
@@ -168,7 +174,71 @@
                           class="text-none"
                         >
                           <template v-slot:prepend>
-                            <img width="16" height="16" src="/mist-greyscale.svg" >
+                            <svg
+                              width="16"
+                              height="16"
+                              viewBox="0 0 190 189.6"
+                              version="1.1"
+                              id="svg2"
+                              sodipodi:docname="mist.svg"
+                              inkscape:version="1.3 (0e150ed, 2023-07-21)"
+                              xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                              xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                              xmlns="http://www.w3.org/2000/svg"
+                              xmlns:svg="http://www.w3.org/2000/svg">
+                              <defs
+                                id="defs2">
+                                <filter
+                                  style="color-interpolation-filters:sRGB;"
+                                  inkscape:label="Greyscale"
+                                  id="filter2"
+                                  x="0"
+                                  y="0"
+                                  width="1"
+                                  height="1">
+                                  <feColorMatrix
+                                    values="0.21 0.72 0.072 0 0 0.21 0.72 0.072 0 0 0.21 0.72 0.072 0 0 0 0 0 1 0 "
+                                    id="feColorMatrix2" />
+                                </filter>
+                              </defs>
+                              <sodipodi:namedview
+                                id="namedview2"
+                                pagecolor="#ffffff"
+                                bordercolor="#000000"
+                                borderopacity="0.25"
+                                inkscape:showpageshadow="2"
+                                inkscape:pageopacity="0.0"
+                                inkscape:pagecheckerboard="0"
+                                inkscape:deskcolor="#d1d1d1"
+                                inkscape:zoom="1.2447257"
+                                inkscape:cx="95.201698"
+                                inkscape:cy="94.800003"
+                                inkscape:window-width="1312"
+                                inkscape:window-height="449"
+                                inkscape:window-x="185"
+                                inkscape:window-y="271"
+                                inkscape:window-maximized="0"
+                                inkscape:current-layer="svg2" />
+                              <g
+                                id="g2"
+                                style="filter:url(#filter2)">
+                                <polygon
+                                  style="fill:#E87200"
+                                  points="190,0 102.2,0 102.2,40.9 149.1,40.9 149.1,87.8 190,87.8"
+                                  id="polygon1" />
+                                <polygon
+                                  style="fill:#84B135"
+                                  points="50.9,51.4 50.9,91.5 98.5,91.5 98.5,139.2 138.7,139.2 138.7,51.4"
+                                  id="polygon2" />
+                                <rect
+                                  style="fill:#0095A9"
+                                  y="102"
+                                  width="87.6"
+                                  height="87.6"
+                                  id="rect2" />
+                              </g>
+                            </svg>
+
                           </template>
                           Open Org
                         </v-btn>
